--- a/build.gradle
+++ b/build.gradle
@@ -13,11 +13,15 @@ buildscript {
 apply plugin: 'groovy'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'maven-publish'
 
 jar {
 	baseName = 'gateway'
 	version = '0.0.1-SNAPSHOT'
 }
+
+group='stanislavzhurich'
+
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
@@ -47,5 +51,28 @@ dependencies {
 dependencyManagement {
 	imports {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:Camden.BUILD-SNAPSHOT"
+	}
+}
+
+publishing {
+	publications {
+		mavenJava(MavenPublication) {
+			from components.java
+		}
+	}
+}
+publishing {
+	repositories {
+		maven {
+			credentials {
+				username 'admin'
+				password 'admin123'
+			}
+			if (project.version.endsWith('-SNAPSHOT')) {
+				url 'http://192.168.33.10:8081/nexus/content/repositories/snapshots/'
+			} else {
+				url 'http://192.168.33.10:8081/nexus/content/repositories/releases/'
+			}
+		}
 	}
 }
