Add port variable

--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -2,5 +2,5 @@ FROM openjdk:8
 VOLUME /tmp
 ADD build/libs/gateway-service-0.0.1-SNAPSHOT.jar /app.jar
 RUN bash -c 'touch /app.jar'
-EXPOSE 8761
+EXPOSE ${PORT}
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
