--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'maven-publish'
 
 jar {
-	baseName = 'gateway'
+	baseName = 'gateway-service'
 	version = '0.0.1-SNAPSHOT'
 }
 
