Add test profile

--- a/src/main/resources/bootstrap-test.yml
+++ b/src/main/resources/bootstrap-test.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: gateway-service
   profiles:
-    active: default
+    active: test
   cloud:
     config:
-       uri: http://192.168.33.10:8761 || $CLOUD_CONFIG_URL
+       uri: $CLOUD_CONFIG_URL
