--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -5,4 +5,4 @@ spring:
     active: default
   cloud:
     config:
-       uri: http://192.168.33.10:8761 || $CLOUD_CONFIG_URL
+       uri: http://192.168.33.11:8761
